tests/snapshots/integration__integration_tests__help__help_config_state_logs.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - logs
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: /nonexistent/test/approvals.toml
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_SYSTEM_CONFIG_PATH: /etc/xdg/worktrunk/config.toml
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state logs - Operation and debug logs

Usage: [1m[36mwt config state logs[0m [36m[OPTIONS][0m [36m[COMMAND][0m

[1m[32mCommands:[0m
  [1m[36mget[0m    Get log file paths
  [1m[36mclear[0m  Clear all log files

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mOutput:[0m
      [1m[36m--format[0m[36m [0m[36m<FORMAT>[0m
          Output format (text, json) [default: text]

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/template output; -vv: debug logs + diagnostic report; -vvv: trace logs)

View and manage log files — hook output, command audit trail, and debug diagnostics.

[1m[32mWhat's logged[0m

Three kinds of logs live in [2m.git/wt/logs/[0m:

[32mCommand log (`commands.jsonl`)[0m

All hook executions and LLM commands are recorded automatically — one JSON object per line. Rotates to [2mcommands.jsonl.old[0m at 1MB (~2MB total). Fields:

 Field                             Description                             
 ────── ────────────────────────────────────────────────────────────────── 
 [2mts[0m     ISO 8601 timestamp                                                 
 [2mwt[0m     The [2mwt[0m command that triggered this (e.g., [2mwt hook pre-merge --yes[0m) 
 [2mlabel[0m  What ran (e.g., [2mpre-merge user:lint[0m, [2mcommit.generation[0m)            
 [2mcmd[0m    Shell command executed                                             
 [2mexit[0m   Exit code ([2mnull[0m for background commands)                           
 [2mdur_ms[0m Duration in milliseconds ([2mnull[0m for background commands)            

The command log appends entries and is not branch-specific — it records all activity across all worktrees.

[32mHook output logs[0m

Hook output lives in per-branch subtrees under [2m.git/wt/logs/{branch}/[0m:

     Operation                      Log path                 
 ────────────────── ──────────────────────────────────────── 
 Background hooks   [2m{branch}/{source}/{hook-type}/{name}.log[0m 
 Background removal [2m{branch}/internal/remove.log[0m             

All [2mpost-*[0m hooks (post-start, post-switch, post-commit, post-merge) run in the background and produce log files. Source is [2muser[0m or [2mproject[0m. Branch and hook names are sanitized for filesystem safety (invalid characters → [2m-[0m; short collision-avoidance hash appended). Same operation on same branch overwrites the previous log. Removing a branch clears its subtree; orphans from deleted branches can be swept with [2mwt config state logs clear[0m.

[32mDiagnostic files[0m

     File                  Created when             
 ───────────── ──────────────────────────────────── 
 [2mverbose.log[0m   Running with [2m-vv[0m                     
 [2mdiagnostic.md[0m Running with [2m-vv[0m when warnings occur 

[2mverbose.log[0m is overwritten on each [2m-vv[0m run. [2mdiagnostic.md[0m is a markdown report for pasting into GitHub issues — written only when warnings occur.

[1m[32mLocation[0m

All logs are stored in [2m.git/wt/logs/[0m (in the main worktree's git directory). All worktrees write to the same directory. Top-level files are shared logs (command audit + diagnostics); top-level directories are per-branch log trees.

[1m[32mExamples[0m

List all log files:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs get[0m

Query the command log:
[107m [0m [2m[0m[2m[34mtail[0m[2m [0m[2m[36m-5[0m[2m .git/wt/logs/commands.jsonl [0m[2m[36m|[0m[2m [0m[2m[34mjq[0m[2m .[0m

View a specific hook log:
[107m [0m [2m[0m[2m[34mcat[0m[2m [0m[2m[32m"$([0m[2m[34mgit[0m[2m rev-parse [0m[2m[36m--git-dir[0m[2m)/wt/logs/feature/project/post-start/build.log"[0m[2m[0m

Clear all logs:
[107m [0m [2m[0m[2m[34mwt[0m[2m config state logs clear[0m
